--- a/mklivecd/README
+++ b/mklivecd/README
@@ -1,19 +1,36 @@
-The latest version of the package can alway be found at the following URL:
+The latest stable version of the package can alway be found at
+the following URL:
 
     http://www.linuxminicd.org/mklivecd/
 
-The package naming tries to follow the Linux kernel approach to versioning, i.e.
-versions are in the format "major.minor.patch" where an uneven minor version
-number indicates an unstable and/or testing release.
+The package naming tries to follow the Linux kernel approach to
+versioning, i.e. versions are in the format "major.minor.patch"
+where an uneven minor version number indicates an unstable and/or
+testing release.
 
-There is a mailing list available for discussion of the mklivecd scripts and
-associated programs. More information on this list, including subscription
-details can be found at:
+If you want to contibute, or just fancy running the latest-
+greatest version, you can also get the latest development version
+from CVS:
 
-     http://lists.berlios.de/mailman/listinfo/minicd-scripts
+    export CVSROOT=:pserver:anonymous@cvs.minicd.berlios.de:/cvsroot/minicd
+    cvs login (There is no anonymous password, a simple Enter will do)
+    cvs -z3 co mklivecd
 
-Patches, suggestions, flames and general comments are always welcome at the
-above adress. Good luck!
+If you have been granted developer access to the project, you can
+access CVS with the following commands:
+
+    export CVS_RSH=ssh
+    export CVSROOT=:ext:USERNAME@cvs.minicd.berlios.de:/cvsroot/minicd
+    cvs -z3 co mklivecd
+
+There is a mailing list available for discussion of the mklivecd
+scripts and associated programs. More information on this list,
+including subscription details can be found at:
+
+    http://lists.berlios.de/mailman/listinfo/minicd-scripts
+
+Patches, suggestions, flames and general comments are always
+welcome at the above adress. Good luck!
 
     - Jaco Greeff <jaco@linuxminicd.org>,
       Thu, Sep 25, 2003
