--- a/mklivecd/FAQ
+++ b/mklivecd/FAQ
@@ -1,24 +1,83 @@
-Q: How do I create a tiny (truly minimal) bootable Mandrake LiveCD?
-A: Here is a step by step process of creating your own Mandrake installation
-   and creating a LiveCD image from it. (You can customise the process by
-   adding additional packages, but the underlying concepts should stay the same)
+# $Id: FAQ,v 1.2 2003/09/26 08:16:42 jaco Exp $
 
-   1. Login as root, using "su -c" and entering your root password
-   2. Create a base directory that is to hold the minimal installation:
-      "mkdir -p /root/tmp/minimal"
+Q: How do I create a tiny (truly minimal) bootable Mandrake
+   LiveCD?
+A: Here is a step by step process of creating your own Mandrake
+   installation and creating a LiveCD image from it. (You can
+   customise the process by adding additional packages, but the
+   underlying concepts should stay the same)
+
+   1. Login as root, using "su -c"
+   2. Create a base directory to hold the minimal installation:
+      "mkdir -p /tmp/minimal"
    3. Install the Mandrake base system,
-      "urpmi basesystem devfsd harddrake --root /root/tmp/minimal"
+      "urpmi basesystem devfsd harddrake --root /tmp/minimal"
    4. Issue a chroot to enter the installation image:
-      "chroot /root/tmp/minimal"
+      "chroot /tmp/minimal"
    5. Enable shadow passwords by issuing "pwconv"
    6. Set your root password with "passwd" and follow the prompts
    7. Exit the chroot image with the "exit" command
    8. Create a LiveCD image from the minimal installation:
-      "mklivecd --rootdir /root/tmp/minimal minimal.iso"
-   9. Burn the 52MB minimal.iso to CD-R and enjoy :)
+      "mklivecd --rootdir /tmp/minimal minimal.iso"
+   9. Burn the resulting minimal.iso to CD-R and enjoy :)
 
-   
-Q: How much does the compression algorithm compress the actual LiveCD root?
-A: Exact figures differ from installation to installation, but as a thumb-suck,
-   you can work on a compression ratio of 40%, i.e. a 1GB initial filesystem
-   _should_ compress to 400MB.
+
+Q: How much does the default compression algorithm compress the
+   actual LiveCD root?
+A: Exact figures differ from installation to installation, but as
+   a thumb-suck, you can work on a compression ratio of 40%, i.e.
+   a 1GB initial filesystem _should_ compress to 400MB.
+
+
+Q: Can I adjust the compression parameters for either a faster
+   LiveCD or a smaller one?
+A: Indeed. The LiveCD creation script has two options, --blocksize
+   and --looptype that allows you to adjust the behaviour of the
+   compression algorithm (--blocksize, default 64K) and the type
+   of compression used (--looptype, default cloop).
+
+   Some testes have beed done of the effect of these options on
+   both and speed, use your own judgement to see what is best for
+   your particular application. (All tests were done with an
+   uncompressed Knoppix v3.3 image.)
+
+   The following table lists the descriptions of the images that
+   were used in these tests. 'Compression' is the type of
+   compression (none = uncompressed, cloop = cloop.o, bzloop =
+   bzloop.o) and 'Block' is the blocksize passed to the various
+   create compressed fs commands:
+
+   Compression,   Block, Name:
+   ------------------------------------------
+          none,    none, knoppix.iso
+         cloop,     64K, knoppix.iso.clp-64
+         cloop,    224K, knoppix.iso.clp-224
+        bzloop,     64K, knoppix.iso.bzlp-64
+        bzloop,    224K, knoppix.iso.bzlp-224
+
+   This table lists the sizes of the files on disk. 'Size' is
+   the actual size as reported by the "du -k" command. 'Ratio'
+   is calculated with size/uncompressed_size*100:
+
+          Size,   Ratio, Name:
+   ------------------------------------------
+    1,871,360K, 100.00%, knoppix.iso
+      708,656K,  37.87%, knoppix.iso.clp-64
+      698,124K,  37.31%, knoppix.iso.clp-224
+      684,404K,  36.57%, knoppix.iso.bzlp-64
+      655,068K,  35.00%, knoppix.iso.bzlp-224
+
+   This following table lists some timings for performing a
+   (hopefully) expensive I/O operation on the mounted image.
+   'Time' is the time taken for the "insmod, mount, ls -alR,
+   tar -cf, umount, rmmod" and 'Ratio' is calculated with
+   time/uncompressed_time*100.
+
+          Time,   Ratio, Name:
+   ------------------------------------------
+           31s, 100.00%, knoppix.iso
+           38s, 122.58%, knoppix.iso.clp-64
+           43s, 138.71%, knoppix.iso.clp-224
+           49s, 158.06%, knoppix.iso.bzlp-64
+           73s, 235.48%, knoppix.iso.bzlp-224
+
