--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,119 +1,129 @@
-# $Id: CHANGELOG,v 1.5 2003/09/26 08:18:14 jaco Exp $
+# $Id: CHANGELOG,v 1.6 2003/09/26 09:19:47 jaco Exp $
 
 * Fri, Sep 26, 2003, 0.5.5-cvs
-  * Jaco Greeff <jaco@linuxminicd.org>:
-    - Changed README file to include CVS location
-    - Changed default blocksize back to 64K in mklivecd (sane
-      default for fastest operation in decompressing the
-      compressed image)
-    - Added '--blocksize' option to mklivecd, accepting sizes in
-      K, eg. '--blocksize 224' to use a 224K size for the
-      compressed blocks.
-    - Updated FAQ to include some compression parameter statistics
-      (describes --blocksize and --looptype)
+  Jaco Greeff <jaco@linuxminicd.org>:
+    [FAQ]:
+      - Updated FAQ to include some compression parameter
+        statistics (describes mklivecd --blocksize and --looptype)
+    [README]:
+      - Include CVS location
+    [mklivecd]:
+      - Changed default blocksize back to 64K (sane default for
+        fastest operation in decompressing the compressed image)
+      - Added '--blocksize' option to, accepting sizes in K, eg.
+        '--blocksize 224' to use a 224K size for the compressed
+        blocks.
 
 
 * Thu, Sep 25, 2003, 0.5.5
-  * Jaco Greeff <jaco@linuxminicd.org>:
-    - Changed input blocksize to compression in mklivecd from 64K
-      to 224K. This still allows for overflow blocks (i.e. block
-      with no compression) to be smaller than the maximum size of
-      256K, whilst allowing for a smaller final iso size (It can
-      be made larger, but 224K is safe and should work for all
-      types of blocks)
-    - Added support for bzloop images (experimental) in both
-      mklivecd and the linuxrc scripts (--looptype=<cloop|bzloop>
-      option to mklivecd). This (--looptype=bzloop) requires an
-      updated cloop-utils providing both the bzloop module and
-      {create,extract}_bzfs executables
-      (http://www.linuxminicd.org/bzloop/)
-    - Test for both the mkisofs and create_{compressed_,bz}fs
-      executables before using them in mklivecd
-    - Test that the user indeed has root privledges in mklivecd
-      before trying to build the iso image
-    - Display the "short GPL" in "mklivecd --version"
-    - If an unknown option is specified (-*) in klivecd, complain
-    - If a target iso is not specified in mklivecd, display the
-      usage info
-    - Redirect all error messages in mklivecd to stderr
-    - Only cater for devfs in linuxrc, manually created device
-      should be done in mklivecd, not "on-the-fly"
-    - Chmod /tmp 777 in linuxrc to allow all users write access
-      to it
-    - Updated the README to contain the mailing list information
-    - Changed "mkisofs -r ..." to "mkisofs -R ..." to preserve
-      directory ownership in mklivecd
-    - Moved hwdetect initscript out of /etc/init.d into
-      /usr/share/mklivecd/init.d
-    - Allow hwdetect to be executed from either /usr/sbin (if
-      installed) or from the always available /initrd/usr/sbin in
-      /etc/init.d/hwdetect
+  Jaco Greeff <jaco@linuxminicd.org>:
+    [README]:
+      - Add mailing list information
+    [hwdetect]:
+      - Moved hwdetect initscript out of /etc/init.d into
+        /usr/share/mklivecd/init.d
+      - Allow hwdetect to be executed from either /usr/sbin (if
+        installed) or from the always available /initrd/usr/sbin
+        in initscript
+    [linuxrc]:
+      - Only cater for devfs, manually created device should be
+        done in mklivecd, not "on-the-fly"
+      - Chmod /tmp to 777, allowing all users write access to it
+      - Added support for bzloop images (experimental) (Also see
+        the mklivecd changelog entry on this)
+    [mklivecd]:
+      - Added support for bzloop images (experimental), specified
+        with --looptype=<cloop|bzloop> option. This
+        (--looptype=bzloop) requires an updated cloop-utils
+        providing both the bzloop module and {create,extract}_bzfs
+        executables (http://www.linuxminicd.org/bzloop/)
+      - Changed input blocksize to compression from 64K to 224K.
+        This still allows for overflow blocks (block with no
+        compression) to be smaller than the maximum size of 256K,
+        whilst allowing for a smaller final iso size (It can be
+        made larger, but 224K is safe and should work for all
+        types of blocks)
+      - Test for both the mkisofs and create_{compressed_,bz}fs
+        executables before using them
+      - Test that the user indeed has root privledges before
+        trying to build the iso image
+      - Display the "short GPL" in "mklivecd --version"
+      - If an unknown option is specified (-*), complain
+      - If a target iso is not specified, display the usage info
+      - Redirect all error messages to stderr
+      - Changed "mkisofs -r ..." to "mkisofs -R ..." to preserve
+        directory ownership
 
 
 * Tue, Sep 23, 2003, 0.5.4
-  * Jaco Greeff <jaco@linuxminicd.org>:
-    - Added mkisofs to RPM spec (Reported by Tibor Pittich)
-    - Sync with RPM spec as imported into Mandrake contrib
-    - Removed locale dependency from initrd size calculation in
-      mklivecd (Reported by Tibor Pittich, fix suggested by
-      Buchan Milne)
-    - Renamed "--root" option to "--rootdir"
-    - --rootdir option now works as expected (inclusive of
-      --exclude-{file,dir} options)
-    - If the selected kernel doesn't match the running kernel in
-      mklivecd, don't try to generate the module dependencies,
-      rather just copy the existing files to the correct initrd
-      location
-    - Added a FAQ entry for creating a very minimal Mandrake
-      LiveCD
+  Jaco Greeff <jaco@linuxminicd.org>:
+    [FAQ]:
+      - Added an entry for creating a very minimal Mandrake LiveCD
+    [mklivecd]:
+      - Removed locale dependency from initrd size calculation
+        (Reported by Tibor Pittich, fix suggested by Buchan Milne)
+      - Renamed "--root" option to "--rootdir"
+      - --rootdir option now works as expected (inclusive of
+        --exclude-{file,dir} options)
+      - If the selected kernel doesn't match the running kernel,
+        don't try to generate the module dependencies, rather just
+        copy the existing files to the correct initrd location
+    [mklivecd.spec]:
+      - Added mkisofs to RPM spec (Reported by Tibor Pittich)
+      - Sync with RPM spec as imported into Mandrake contrib
 
 
 * Mon, Sep 22, 2003, 0.5.3
-  * Jaco Greeff <jaco@linuxminicd.org>:
-    - hwdetect once again creates a workable (non-optimal)
-      XF86Config file allowing X to be started
-    - Added explicit --kernel option to mklivecd, if not
-      specified it defaults to the current running kernel
-      (uname -r)
-    - Added --exclude-file option to mklivecd
-    - Exclude the following file patterns by default in the LiveCD
-      image creation of mklivecd:
-      - core.* (/core[.][0-9][0-9]*$)
-      - *.rpmnew (.*[.]rpmnew$)
-      - *.rpmsave (.*[.]rpmsave$)
-      - /.* (^/[.].*)
-      - .bash_history (/[.]bash_history$)
-      - .fonts.cache-* (/[.]fonts[.]cache-[0-9]$)
-      - .xauth* (/[.]xauth.*)
-      - .xsession-errors (/[.]xsession-errors$)
-    - Changed exclude directory pattern to not assume a full path
-      i.e. ^ is to be added to denote a full path
-    - Do exact matches on the default excluded directories
-      (leading ^ and trailing $) to shrink the size of the
-      excluded list, making mkisofs scanning faster
-    - Decreased initrd size by removing the extraoneous 250K (not
-      needed anymore)
-    - Cleaned usage information displayed in mklivecd --help
-    - If --cloop is not specified on command-line, don't create
-      link in mklivecd
-    - Try /tmp first before $TMPDIR for a decent tmp directory
-      (/tmp is always excluded from the final LiveCD, $TMPDIR
-      might not be)
-    - linuxrc now creates /var/log/wtmp and /var/run/utmp
-    - Split project version into major, minor & patch in Makefile
-    - Fixed uname -r bug in Makefile, allowing for correct
-      execution via shell
+  Jaco Greeff <jaco@linuxminicd.org>:
+    [Makefile]:
+      - Split project version into major, minor & patch
+      - Fixed uname -r bug, allowing for correct execution via
+        shell
+    [linuxrc]:
+      - Now creates /var/log/wtmp and /var/run/utmp
+    [hwdetect]:
+      - Once again creates a workable (non-optimal) XF86Config
+        file allowing X to be started
+      - Added explicit --kernel option, if not specified it
+        defaults to the current running kernel (uname -r)
+      - Added --exclude-file option
+      - Exclude the following file patterns by default in the
+        LiveCD image creation:
+        - core.* (/core[.][0-9][0-9]*$)
+        - *.rpmnew (.*[.]rpmnew$)
+        - *.rpmsave (.*[.]rpmsave$)
+        - /.* (^/[.].*)
+        - .bash_history (/[.]bash_history$)
+        - .fonts.cache-* (/[.]fonts[.]cache-[0-9]$)
+        - .xauth* (/[.]xauth.*)
+        - .xsession-errors (/[.]xsession-errors$)
+      - Changed exclude directory pattern to not assume a full
+        path, i.e. ^ is to be added to denote a full path
+      - Do exact matches on the default excluded directories
+        (leading ^ and trailing $) to shrink the size of the
+        excluded list, making mkisofs scanning faster
+      - Decreased initrd size by removing the extraoneous 250K
+        (not needed anymore)
+      - Cleaned usage information displayed in --help
+      - If --cloop is not specified on command-line, don't create
+        hard link
+      - Try /tmp first before $TMPDIR for a decent tmp directory
+        (/tmp is always excluded from the final LiveCD, $TMPDIR
+        might not be)
 
 
 * Mon, Sep 15, 2003, 0.5.2
   * Jaco Greeff <jaco@linuxminicd.org>:
-    - Revamped linuxrc and mklivecd to cater for pivot_root,
-      allowing for better access to actual mounted filesystems
+    [linuxrc]:
+      - Cater for pivot_root, allowing for better access to actual
+        mounted filesystems
 
 
 * Mon, Sep 01, 2003, 0.5.1
   * Jaco Greeff <jaco@linuxminicd.org>:
-    - Initial release under the mklivecd name (preparing for a
-      wider release to the MDK community) after being adapted from
-      the MiniCD build, init and hwdetect scripts
-    - Added spec file for RPM build
+    [mklivecd]:
+      - Initial release under the mklivecd name (preparing for a
+        wider release to the MDK community) after being adapted
+        from the MiniCD build, init and hwdetect scripts
+    [mklivecd.spec]:
+      - Added spec file for RPM build
