--- a/mklivecd/TODO
+++ b/mklivecd/TODO
@@ -1,4 +1,4 @@
-# $Id: TODO,v 1.2 2003/09/26 11:51:36 jaco Exp $
+# $Id: TODO,v 1.3 2003/09/29 10:33:53 jaco Exp $
 
 - Allow for actual probed monitors to be selected instead of
   going for the "good_default_monitor" in hwdetect. This is to be
@@ -28,3 +28,4 @@
 - Localisation support
 - Support for different keyboards via a option to the isolinux
   bootup prompt
+- Support for splash images on the isolinux screen
