--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.13 2003/10/01 06:28:47 jaco Exp $
+# $Id: CHANGELOG,v 1.14 2003/10/01 08:10:44 jaco Exp $
 
 * Wed, Oct 01, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -25,6 +25,8 @@
         command)
       - Ability to build CVS dist per date
       - Add RPM release information for spec file generation
+      - Added 'make rpm' target for building both the noarch and
+        src RPMS
     [README]:
       - Include CVS location
     [hwdetect]:
