--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.17 2003/10/01 12:04:25 jaco Exp $
+# $Id: CHANGELOG,v 1.18 2003/10/01 13:20:49 jaco Exp $
 
 * Wed, Oct 01, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -38,9 +38,11 @@
         cannot be detected properly, fall back to a good default
         (1024x768). Thanks to Pixel <pixel@mandrakesoft.com> for
         pointers in this area.
-      - Default keyboard to 'us' as per language 'en'. (This gives
-        a stepping stone for configurable keyboards via the boot
-        prompt.)
+      - Default keyboard to 'us' as per language 'en'. (Specified
+        in Rules.mk)
+      - Keyboad can be specified on isolinux prompt, for example
+        keyb=en_GB resulting in a default keyboard as per the
+        en_GB locale (If not specified defaults to Rules.mk value)
     [linuxrc]:
       - Only make symlinks to /var/lib/{rpm,urpmi} directories, the
         rest are actual writables
