--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.21 2003/10/02 08:08:28 jaco Exp $
+# $Id: CHANGELOG,v 1.22 2003/10/02 09:21:08 jaco Exp $
 
 * Wed, Oct 01, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -15,6 +15,8 @@
       - Updated FAQ to include some compression parameter
         statistics (describes mklivecd '--blocksize' and
         '--looptype' options)
+      - Added a FAQ entry for the "keyb=<language>' isolinux boot
+        option
     [Makefile]:
       - Combined piped sed commands into one
       - Removed non-existing busybox and cloop version
@@ -38,8 +40,7 @@
         cannot be detected properly, fall back to a good default
         (1024x768). Thanks to Pixel <pixel@mandrakesoft.com> for
         pointers in this area.
-      - Default keyboard to 'us' as per language 'en'. (Specified
-        in Rules.mk)
+      - Default keyboard to 'en_US'. (Specified in Rules.mk)
       - Keyboad can be specified on isolinux prompt, for example
         keyb=en_GB resulting in a default keyboard as per the
         en_GB locale (If not specified defaults to Rules.mk value)
