--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.24 2003/10/02 11:45:12 jaco Exp $
+# $Id: CHANGELOG,v 1.25 2003/10/02 11:48:09 jaco Exp $
 
-* Wed, Oct 01, 2003, 0.5.6-cvs
+* Thu, Oct 02, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
     [mklivecd]:
       - Fix rootdir to use the kernel/modules from the chroot
@@ -64,7 +64,7 @@
         scripts on the initrd image, saving some space
       - Added '--keyboard=<language>' option to override the
         default keyboard layout
-      - Added '--bootmsg<boot.msg>' option to provide a message
+      - Added '--bootmsg=<boot.msg>' option to provide a message
         for the isolinux message display
     [mklivecd.spec]:
       - Synced with contrib spec
