--- a/mklivecd/FAQ
+++ b/mklivecd/FAQ
@@ -1,4 +1,4 @@
-# $Id: FAQ,v 1.5 2003/10/02 12:54:23 jaco Exp $
+# $Id: FAQ,v 1.6 2003/10/02 13:47:33 jaco Exp $
 
 Q: How do I create a tiny (truly minimal) bootable Mandrake
    LiveCD?
@@ -10,16 +10,17 @@ A: Here is a step by step process of creating your own Mandrake
    1. Login as root, using "su -c"
    2. Create a base directory to hold the minimal installation:
       "mkdir -p /tmp/minimal"
-   3. Install the Mandrake base system,
+   3. Install the Mandrake base system:
       "urpmi basesystem devfsd harddrake --root /tmp/minimal"
-   4. Issue a chroot to enter the installation image:
+   4. Enable shadow passwords in the image by issuing:
+      "chroot /tmp/minimal /usr/sbin/pwconv"
+   5. Set your root password ('root') within the image:
       "chroot /tmp/minimal"
-   5. Enable shadow passwords by issuing "pwconv"
-   6. Set your root password with "passwd" and follow the prompts
-   7. Exit the chroot image with the "exit" command
-   8. Create a LiveCD image from the minimal installation:
+      "echo 'root' | passwd --stdin root"
+      "exit"
+   6. Create a LiveCD image from the minimal installation:
       "mklivecd --rootdir /tmp/minimal minimal.iso"
-   9. Burn the resulting minimal.iso to CD-R and enjoy :)
+   7. Burn the resulting minimal.iso to CD-R and enjoy :)
 
 
 Q: How much does the default compression algorithm compress the
