Changed keyb=language to keyb=mapping

--- a/mklivecd/FAQ
+++ b/mklivecd/FAQ
@@ -1,4 +1,4 @@
-# $Id: FAQ,v 1.8 2003/10/02 14:25:12 jaco Exp $
+# $Id: FAQ,v 1.9 2003/10/03 06:19:06 jaco Exp $
 
 Q: How do I create a tiny (truly minimal) bootable Mandrake
    LiveCD?
@@ -84,14 +84,15 @@ A: Indeed. The LiveCD creation script has two options, --blocksize
 
 
 Q: How do I change my keyboard layout?
-A: By default the script installs a keyboard layout for en_US.
-   You can change this behaviour on the LiveCD in two ways:
+A: By default the script installs a keyboard layout for a 'us'
+   layout. You can change this behaviour on the LiveCD in two
+   ways:
 
-   1. On bootup, specify "livecd keyb=<language>" at the isolinux
-      prompt. For instance, "livecd keyb=en_UK" will select the
-      keyboard layout as used in the UK.
+   1. On bootup, specify "livecd keyb=<mapping>" at the isolinux
+      prompt. For instance, "livecd keyb=us_intl" will select the
+      international US keyboard layout.
    2. If you are building a specific CD which should cater for a
-      specific keyboard layout, specify '--keyboard=<language>' on
+      specific keyboard layout, specify '--keyboard=<mapping>' on
       the mklivecd command-line to automatically add a default
       option to the isolinux configuration.
 
