--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.28 2003/10/02 14:21:18 jaco Exp $
+# $Id: CHANGELOG,v 1.29 2003/10/03 06:19:06 jaco Exp $
 
-* Thu, Oct 02, 2003, 0.5.6-cvs
+* Fri, Oct 03, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
     [mklivecd]:
       - Fix rootdir to use the kernel/modules from the chroot
@@ -15,7 +15,7 @@
       - Updated to include some compression parameter
         statistics (describes mklivecd '--blocksize' and
         '--looptype' options)
-      - Added an entry for the "keyb=<language>' isolinux boot
+      - Added an entry for the "keyb=<mapping>' isolinux boot
         option
       - Added an QA for the creation of LSS images as used by
         the 'mklivecd --iso-bgimage' command
@@ -43,10 +43,10 @@
         cannot be detected properly, fall back to a good default
         (1024x768). Thanks to Pixel <pixel@mandrakesoft.com> for
         pointers in this area.
-      - Default keyboard to 'en_US'. (Specified in Rules.mk)
+      - Default keyboard to 'us'. (Specified in Rules.mk)
       - Keyboad can be specified on isolinux prompt, for example
-        keyb=en_GB resulting in a default keyboard as per the
-        en_GB locale (If not specified defaults to Rules.mk value)
+        keyb=dvorak resulting in a dvorak keyboard (If not
+        specified, it defaults to Rules.mk, 'us', value)
     [linuxrc]:
       - Only make symlinks to /var/lib/{rpm,urpmi} directories, the
         rest are actual writables
