--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.30 2003/10/03 06:28:21 jaco Exp $
+# $Id: CHANGELOG,v 1.31 2003/10/03 06:32:01 jaco Exp $
 
 * Fri, Oct 03, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -36,6 +36,9 @@
         src RPMS
       - Build all targets to DISTDIR
       - Split variables into Rules.mk
+    [Rules.mk]:
+      - Added file containing all variables from original Makefile
+      - Added default keyboard mapping variable
     [README]:
       - Include CVS location
     [hwdetect]:
