--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,6 @@
-# $Id: CHANGELOG,v 1.46 2003/10/06 14:57:50 jaco Exp $
+# $Id: CHANGELOG,v 1.47 2003/10/06 14:59:20 jaco Exp $
+
+* Mon, Oct 06, 2003, 0.5.7-cvs
 
 * Mon, Oct 06, 2003, 0.5.6
   + Buchan Milne <bgmilne@cae.co.za>:
