Updated to include reference to mm kernel as well

--- a/mklivecd/FAQ
+++ b/mklivecd/FAQ
@@ -1,4 +1,4 @@
-# $Id: FAQ,v 1.13 2003/10/21 13:59:30 jaco Exp $
+# $Id: FAQ,v 1.14 2003/10/29 11:35:43 jaco Exp $
 
 Q: How do I create a tiny (truly minimal) bootable Mandrake
    LiveCD?
@@ -28,8 +28,8 @@ Q: I have created a LiveCD and I'm seeing weird hangs. This either
    process. Any ideas?
 A: The most common cause for these hangs is an outdated cloop
    module as shipped in the MDK 9.2 kernel. Install an updated
-   kernel >= 2.4.22.18mdk (providing cloop 1.02) or
-   kernel-tmb >= 2.4.22.10.tmb.4mdk from contrib, and use this
+   kernel >= 2.4.22.21mdk (providing cloop 1.02) or
+   kernel-tmb >= 2.4.22.21{tmb,mm} from contrib, and use this
    one as the kernel for your LiveCD.
 
 
